Mobile overflow fixed, added FAQ

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,10 @@
 	--secondary-font: 'Source Code Pro', monospace;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
 	font-family: var(--secondary-font);
 	box-sizing: border-box;
@@ -25,6 +29,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	background-color: var(--primary-background-color);
+	overflow-x: hidden;
 }
 @media (prefers-color-scheme: dark) {
 	/* body {
